--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Porfolio",
+  "name": "Portfolio",
   "version": "1.0.0",
   "description": "Thank you for visiting my porfolio page! This is a place where I continue to gather and post some of my skills and accomplishments.",
   "main": "server.js",
