--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "nodemailer": "^6.4.5"
+    "nodemailer": "^6.4.5",
+    "nodemailer-mailgun-transport": "^1.0.1"
   }
 }
